# animangadle

./: .gitignore  README.md  anime.html  anime.json  anime_script.js  index.html  manga.html  manga.json  manga_script.js  styles.css
animangadle-rs/: Cargo.toml
animangadle-rs/src/: main.rs
